<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Smart Host</string>
    <string name="settings">Settings</string>
    <string name="push">Push notification</string>
    <string name="appraisals">Appraisals</string>
    <string name="listings">Listing</string>
    <string name="map">Map</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="settings_stuff">Settings stuff</string>
    <string name="where_to_search">Where do you want to search?</string>

    <string name="calendar">Calendar</string>
    <string name="local">Local</string>

    <string name="location">Location</string>

    <string name="yourAddress">Your Address</string>
    <string name="yourPlace">Is your listing the entire house?</string>
    <string name="yourOccupancy">Your occupancy</string>
    <string name="yourBathrooms">Your # of bathrooms</string>




    <string name="aDay">A Day</string>

    <string name="aMonth">A Month</string>
    <string name="aYear">A Year</string>

    <string name="privateRoom">PRIVATE ROOM</string>
    <string name="entireHome">ENTRIRE HOME</string>
    <string name="oneBedroom">1 Bedroom</string>
    <string name="twoBedroom">2 Bedroom</string>
    <string name="threeBedroom">3 Bedroom</string>

    <string name="accommodates">Accommodates</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="people">People</string>
    <string name="bathrooms">Bathrooms</string>

    <string name="manhattan">120 Manhattan Ave</string>

    <string name="map">Map</string>
    <string name="earningPotential">EARNING POTENTIAL</string>


    <array name="amenitites">

        <item name="Wifi">Wifi</item>

        <!--"Air Conditioning",-->
        <!--"Breakfast",-->
        <!--"Buzzer/Wireless Intercom",-->
        <!--"Cable/Satellite",-->
        <!--"Clothes Dryer",-->
        <!--"Clothes Washer",-->
        <!--"Doorman",-->
        <!--"Elevator",-->
        <!--"Family/Kid Friendly",-->
        <!--"Gym",-->
        <!--"Heating",-->
        <!--"Hot Tub",-->
        <!--"Internet",-->
        <!--"Kitchen",-->
        <!--"Parking",-->
        <!--"Pets Allowed",-->
        <!--"Pool",-->
        <!--"Suitable For Events",-->
        <!--"TV",-->
        <!--"WiFi"-->



    </array>



</resources>
