<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:id="@+id/topView"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:background="@drawable/top_small"
            android:layout_height="match_parent">


        <RelativeLayout
                android:id="@+id/searchHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">


            <com.smarthost.ui.views.avenir.AvenirTextView
                    android:id="@+id/searchButton"
                    android:text="@string/location"
                    android:drawableTop="@android:drawable/ic_menu_search"
                    android:layout_width="wrap_content"
                    android:textColor="@color/sh_gray"
                    android:background="@color/sh_gray_button_alpha"
                    android:layout_alignParentLeft="true"
                    android:layout_height="wrap_content"/>

            <com.smarthost.ui.views.avenir.EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:textColor="@color/blue_lettering"
                    android:background="@color/sh_gray_button_alpha"
                    android:layout_toRightOf="@id/searchButton"
                    android:layout_marginLeft="-10dp"
                    android:hint="@string/manhattan"
                    android:layout_height="wrap_content"/>


        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/amountHolder"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_below="@id/searchHolder"
                android:layout_marginRight="30dp"
                android:background="@color/pinkBG"
                android:layout_height="wrap_content">


            <RelativeLayout
                    android:id="@+id/numberHolder"
                    android:layout_width="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/whiteLogo"
                        android:layout_width="wrap_content"
                        android:src="@drawable/ic_launcher"
                        android:layout_height="wrap_content"/>

                <com.smarthost.ui.views.avenir.AvenirTextView
                        android:id="@+id/actualAmount"
                        android:layout_width="wrap_content"
                        android:text="239"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_xxlarge"
                        android:layout_toRightOf="@id/whiteLogo"
                        android:layout_height="wrap_content"/>

                <com.smarthost.ui.views.avenir.AvenirTextView
                        android:layout_below="@+id/whiteLogo"
                        android:layout_width="match_parent"
                        android:text="@string/earningPotential"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"/>

            </RelativeLayout>

            <LinearLayout
                    android:id="@+id/durationHolder"
                    android:orientation="horizontal"
                    android:layout_below="@id/numberHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <com.smarthost.ui.views.avenir.AvenirTextView
                        android:id="@+id/day"
                        android:textColor="@color/blue_lettering"
                        android:layout_width="wrap_content"
                        android:text="@string/aDay"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                <com.smarthost.ui.views.avenir.AvenirTextView
                        android:id="@+id/month"
                        android:textColor="@color/blue_lettering"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="-10dp"
                        android:layout_weight="1"
                        android:text="@string/aMonth"
                        android:layout_height="wrap_content"/>

                <com.smarthost.ui.views.avenir.AvenirTextView
                        android:id="@+id/year"
                        android:textColor="@color/blue_lettering"
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="-10dp"
                        android:text="@string/aYear"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>


            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>
    <View
            android:id="@+id/horizontalBar"
            android:background="@color/blue_lettering"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="5dp"/>


    <LinearLayout
            android:id="@+id/RoomHolder"
            android:orientation="horizontal"
            android:background="@drawable/bottom_small"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">


        <com.smarthost.ui.views.avenir.AvenirTextView
                android:id="@+id/privateButton"
                android:layout_width="wrap_content"
                android:text="@string/privateRoom"
                android:padding="5dp"
                android:background="@color/sh_gray_button_alpha"
                android:drawableTop="@drawable/ic_launcher"
                android:layout_marginRight="-4dp"
                android:layout_height="wrap_content"/>

        <com.smarthost.ui.views.avenir.AvenirTextView
                android:id="@+id/entireHomeButton"
                android:layout_width="wrap_content"
                android:text="@string/entireHome"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:background="@color/sh_gray_button_alpha"
                android:drawableTop="@drawable/ic_launcher"
                android:padding="5dp"/>



    </LinearLayout>





</LinearLayout>

